added watchify to make debug easier + added css page to index.html and to build process

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Chip8</title>
-    </head>
-    <body>
-        <script src="bundle.js"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Chip8</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <script src="bundle.js"></script>
+</body>
+
 </html>
